--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@commitlint/cli": "^19.5.0",
     "@commitlint/config-conventional": "^19.5.0",
     "@remix-run/dev": "^2.13.1",
+    "@tanstack/eslint-plugin-query": "^5.59.7",
     "@types/node": "^22.7.6",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
@@ -47,6 +48,7 @@
     "husky": "^9.1.6",
     "postcss": "^8.4.38",
     "prettier": "^3.3.3",
+    "remix-development-tools": "^4.7.3",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.1.6",
     "vite": "^5.1.0",
