--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "dotenv": "^16.4.5",
     "isbot": "^4.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.5.0",
